--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "slidev --open",
     "build": "slidev build",
-    "export": "slidev export"
+    "export": "slidev export",
+    "png": "slidev export --format png"
   },
   "dependencies": {
     "@slidev/cli": "^0.19.6",
